fixed footer covering content

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+body { 
+    background-color: white;
+    padding-bottom: 240px;
+    margin-bottom: 40px;
+}
+
 .font-awesome {
     text-align: center;
     padding: 25px;
